perubahan pada route pasien rawat jalan, menyatukan proses /doctor & /nurse menjadi /process. menambahkan validasi untuk query param. menggunakan type converter untuk konversi tipe struct request ke model. menambahkan jangka waktu access_token hingga 1 hari dan refredh_token hingga 1 minggu.
