# docs/swagger.json
@@ -31,7 +31,7 @@
                 "summary": "Login",
                 "parameters": [
                     {
-                        "description": "send request email, password",
+                        "description": "Send Request Email and Password",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -120,6 +120,20 @@
                     "OutPatient"
                 ],
                 "summary": "GetAllPatient",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Date Filter Range Start (2022-02-23)",
+                        "name": "date_start",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Date Filter Range End (2006-02-25)",
+                        "name": "date_end",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -131,7 +145,7 @@
                                 {
                                     "type": "object",
                                     "properties": {
-                                        "Data": {
+                                        "data": {
                                             "type": "array",
                                             "items": {
                                                 "$ref": "#/definitions/response.OutPatientResponse"
@@ -175,7 +189,7 @@
                 "summary": "New Medic Record",
                 "parameters": [
                     {
-                        "description": "new medic record",
+                        "description": "New Medic Record",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -226,7 +240,7 @@
                 "summary": "Process Doctor",
                 "parameters": [
                     {
-                        "description": "process medic record by doctor",
+                        "description": "Process Medic Record by Doctor",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -277,7 +291,7 @@
                 "summary": "Process Nurse",
                 "parameters": [
                     {
-                        "description": "process medic record by nurse",
+                        "description": "Process Medic Record by Nurse",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -337,7 +351,7 @@
                                 {
                                     "type": "object",
                                     "properties": {
-                                        "Data": {
+                                        "data": {
                                             "type": "array",
                                             "items": {
                                                 "$ref": "#/definitions/models.Patient"
@@ -381,7 +395,7 @@
                 "summary": "CreatePatient",
                 "parameters": [
                     {
-                        "description": "patient details",
+                        "description": "Patient Details",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -433,7 +447,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "patient id",
+                        "description": "Patient ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -450,7 +464,7 @@
                                 {
                                     "type": "object",
                                     "properties": {
-                                        "Data": {
+                                        "data": {
                                             "$ref": "#/definitions/models.Patient"
                                         }
                                     }
@@ -494,7 +508,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "patient id",
+                        "description": "Patient ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -543,13 +557,13 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "patient id",
+                        "description": "Patient ID",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "patient details",
+                        "description": "Patient Details",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -601,7 +615,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "pass access token here",
+                        "description": "Pass access_token Here",
                         "name": "token",
                         "in": "query",
                         "required": true
@@ -635,7 +649,6 @@
             "type": "object",
             "properties": {
                 "bloodTension": {
-                    "description": "SerialNumber uint",
                     "type": "integer"
                 },
                 "bodyTemperature": {
@@ -653,11 +666,8 @@
                 "id": {
                     "type": "integer"
                 },
-                "medicalStaff": {
-                    "$ref": "#/definitions/models.MedicalStaff"
-                },
-                "medicalStaffID": {
-                    "type": "integer"
+                "medicalSession": {
+                    "$ref": "#/definitions/models.MedicalSession"
                 },
                 "patient": {
                     "$ref": "#/definitions/models.Patient"
@@ -668,44 +678,33 @@
                 "prescription": {
                     "type": "string"
                 },
+                "serialNumber": {
+                    "type": "string"
+                },
                 "weight": {
                     "type": "integer"
                 }
             }
         },
-        "models.MedicalFacility": {
+        "models.MedicalSession": {
             "type": "object",
             "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.MedicalStaff": {
-            "type": "object",
-            "properties": {
-                "facility": {
-                    "$ref": "#/definitions/models.MedicalFacility"
-                },
-                "facility_id": {
-                    "type": "integer"
-                },
-                "full_name": {
+                "dateCheck": {
                     "type": "string"
                 },
-                "gender": {
-                    "type": "string"
-                },
-                "id": {
+                "medicRecordID": {
                     "type": "integer"
                 },
-                "user": {
-                    "$ref": "#/definitions/models.User"
+                "medicalFacilityID": {
+                    "type": "integer"
                 },
-                "user_id": {
+                "medicalStaffID": {
+                    "type": "integer"
+                },
+                "queue": {
+                    "type": "integer"
+                },
+                "sessionID": {
                     "type": "integer"
                 }
             }
@@ -745,20 +744,6 @@
                 }
             }
         },
-        "models.Role": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
         "models.Token": {
             "type": "object",
             "properties": {
@@ -766,41 +751,6 @@
                     "type": "string"
                 },
                 "refresh_token": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.User": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "string"
-                },
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "role_id": {
-                    "type": "integer"
-                },
-                "roles": {
-                    "$ref": "#/definitions/models.Role"
-                },
-                "status": {
-                    "type": "integer"
-                },
-                "updatedAt": {
                     "type": "string"
                 }
             }
@@ -922,6 +872,9 @@
                 },
                 "queue": {
                     "type": "integer"
+                },
+                "serial_number": {
+                    "type": "string"
                 },
                 "session": {
                     "type": "string"
